# urban-flood-risk-analysis-srilanka

./: .gitignore  README.md  bucket_list.xml  check_csv.py  find_google_tile.py  find_google_tile_pure.py  mask_notebook.py  pyproject.toml  revert_notebook.py  update_notebook.py  update_notebook_manual.py
data/: README.md
data/raw/landuse/: colombo_water_raw.json
notebooks/: analysis.ipynb
scripts/: download_data.py  extract_cell.py  fix_notebook_portable.py  generate_report_figures.py  inspect_notebook.py  patch_index_error.py  patch_name_error.py  scientific_analysis.py  validate_notebook_execution.py
src/: data_loading.py  integration.py  raster_analysis.py  vector_analysis.py
