[tool.poetry]
name = "urban-flood-risk-analysis"
version = "0.1.0"
description = "Urban flood vulnerability assessment for Colombo District, Sri Lanka using CHIRPS rainfall, SRTM DEM, and Google Building footprints"
authors = [
    "Surya Jamuna Rani Subramaniyan <s3664414@student.utwente.nl>",
    "Sachin Ravi <s3563545@student.utwente.nl>"
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# Core scientific computing
numpy = "^1.24.0"
scipy = "^1.11.0"
pandas = "^2.0.0"

# Geospatial raster processing
xarray = "^2023.1.0"
rioxarray = "^0.14.0"
netcdf4 = "^1.6.0"
rasterio = "^1.3.0"
rasterstats = "^0.19.0"
geocube = "^0.4.0"

# Geospatial vector processing
geopandas = "^0.14.0"
shapely = "^2.0.0"
fiona = "^1.9.0"
pyproj = "^3.6.0"

# Tensor operations
torch = "^2.0.0"

# Visualization
matplotlib = "^3.7.0"
folium = "^0.14.0"
plotly = "^5.14.0"
branca = "^0.6.0"

# Data downloading
requests = "^2.31.0"

# Jupyter
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
